# semtree

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
bindings/python/: Cargo.toml  pyproject.toml  test_semtree.py
bindings/python/src/: lib.rs
crates/semtree_ai/: Cargo.toml
crates/semtree_ai/src/: api.rs  json_api.rs  lib.rs  tests.rs
crates/semtree_ast/: Cargo.toml
crates/semtree_ast/src/: builtins.rs  codegen.rs  lib.rs  tests.rs  typed.rs
crates/semtree_bench/: BENCHMARKS.txt  Cargo.toml
crates/semtree_bench/src/: grammar_loader.rs  main.rs
crates/semtree_cli/: Cargo.toml
crates/semtree_cli/src/: main.rs
crates/semtree_cli/src/commands/: benchmark.rs  check.rs  debug.rs  doctor.rs  format.rs  generate.rs  grammar_util.rs  import.rs  init.rs  lint.rs  lsp.rs  migrate.rs  mod.rs  parity.rs  parse.rs  query.rs  run.rs  symbols.rs  test.rs
crates/semtree_core/: Cargo.toml
crates/semtree_core/src/: interner.rs  lib.rs  syntax_kind.rs  text_range.rs  token.rs
crates/semtree_ffi/: Cargo.toml
crates/semtree_ffi/src/: lib.rs
crates/semtree_format/: Cargo.toml
crates/semtree_format/src/: config.rs  engine.rs  lib.rs  tests.rs
crates/semtree_grammar/: Cargo.toml
crates/semtree_grammar/src/: dsl.rs  format_dsl.rs  ir.rs  lib.rs  optimize.rs  validate.rs
crates/semtree_green/: Cargo.toml
crates/semtree_green/src/: builder.rs  cache.rs  lib.rs  node.rs  tests.rs
crates/semtree_ide/: Cargo.toml
crates/semtree_ide/src/: completion.rs  folding.rs  lib.rs  navigation.rs  semantic_tokens.rs  tests.rs
crates/semtree_lexer/: Cargo.toml
crates/semtree_lexer/src/: cursor.rs  lexer.rs  lib.rs  tests.rs
crates/semtree_lint/: Cargo.toml
crates/semtree_lint/src/: engine.rs  lib.rs  rules.rs  tests.rs
crates/semtree_parser/: Cargo.toml
crates/semtree_parser/src/: event.rs  grammar.rs  lib.rs  parser.rs  sink.rs  source.rs  tests.rs
crates/semtree_plugin/: Cargo.toml
crates/semtree_plugin/src/: lib.rs  registry.rs  tests.rs  traits.rs
crates/semtree_query/: Cargo.toml
crates/semtree_query/src/: captures.rs  engine.rs  lib.rs  pattern.rs  tests.rs
crates/semtree_red/: Cargo.toml
crates/semtree_red/src/: iter.rs  lib.rs  node.rs  tests.rs  token.rs
crates/semtree_refactor/: Cargo.toml
crates/semtree_refactor/src/: extract.rs  inline.rs  lib.rs  rename.rs  tests.rs  tree_edit.rs
crates/semtree_runtime/: Cargo.toml
crates/semtree_runtime/src/: incremental.rs  lib.rs  runtime_lexer.rs  runtime_parser.rs  session.rs  tests.rs
crates/semtree_runtime/src/glr/: driver.rs  error_recovery.rs  gss.rs  incremental.rs  mod.rs  sppf.rs  table.rs  tests.rs
crates/semtree_runtime/tests/: corpus.rs
crates/semtree_semantic/: Cargo.toml
crates/semtree_semantic/src/: diagnostics.rs  lib.rs  resolver.rs  scope.rs  symbols.rs  tests.rs
crates/semtree_ts_import/: Cargo.toml
crates/semtree_ts_import/src/: importer.rs  lib.rs  tests.rs
crates/semtree_wasm/: Cargo.toml
crates/semtree_wasm/src/: lib.rs
docs/: README.md
docs/explanation/: README.md  architecture.md  green-red-trees.md  parsers-rd-vs-glr.md  vs-tree-sitter.md
docs/how-to/: README.md  apply-to-any-project.md  import-tree-sitter.md  neovim-lsp.md  use-the-cli.md  write-a-grammar.md
docs/how-to/examples/todo-lsp/: Cargo.toml  README.md
docs/how-to/examples/todo-lsp/grammars/: todo.semtree
docs/how-to/examples/todo-lsp/samples/: demo.todo
docs/how-to/examples/todo-lsp/src/: main.rs
docs/reference/: README.md  builtins.md  cli.md  dsl-syntax.md  output-formats.md
docs/tutorials/: 01-install.md  02-parse-first-file.md  03-first-grammar.md  04-neovim.md  README.md
editors/neovim/: README.md
editors/neovim/ftdetect/: semtree.vim
editors/neovim/ftplugin/: semtree.vim
editors/neovim/indent/: semtree.vim
editors/neovim/lua/semtree/: health.lua  init.lua  inspector.lua  live.lua  panel.lua  util.lua
editors/neovim/plugin/: semtree.vim
editors/neovim/syntax/: semtree-inspect.vim  semtree-symbols.vim  semtree-tree.vim  semtree.vim
editors/vscode/: README.md  extension.js  package.json
examples/: demo.py  demo.rs  demo.toml
examples/neovim-setup/: README.md  add-to-plugins.lua  keymaps.lua
grammars/: css.semtree  javascript.semtree  json.semtree  python.semtree  rust.semtree  toml.semtree
grammars/tests/: benchmark.css  benchmark.js  benchmark.py  benchmark.rs  python_features.py  test.json  test.toml
queries/css/: highlights.scm
queries/javascript/: highlights.scm  locals.scm
queries/json/: highlights.scm
queries/python/: highlights.scm
queries/rust/: highlights.scm  locals.scm
queries/toml/: highlights.scm
