[workspace]
members = [
    "crates/semtree_core",
    "crates/semtree_lexer",
    "crates/semtree_green",
    "crates/semtree_red",
    "crates/semtree_parser",
    "crates/semtree_grammar",
    "crates/semtree_runtime",
    "crates/semtree_query",
    "crates/semtree_ast",
    "crates/semtree_semantic",
    "crates/semtree_format",
    "crates/semtree_lint",
    "crates/semtree_ts_import",
    "crates/semtree_plugin",
    "crates/semtree_ffi",
    "crates/semtree_ide",
    "crates/semtree_refactor",
    "crates/semtree_cli",
    "crates/semtree_ai",
    "crates/semtree_bench",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
semtree_core = { path = "crates/semtree_core" }
semtree_lexer = { path = "crates/semtree_lexer" }
semtree_green = { path = "crates/semtree_green" }
semtree_red = { path = "crates/semtree_red" }
semtree_parser = { path = "crates/semtree_parser" }
semtree_grammar = { path = "crates/semtree_grammar" }
semtree_runtime = { path = "crates/semtree_runtime" }
semtree_query = { path = "crates/semtree_query" }
semtree_ast = { path = "crates/semtree_ast" }
semtree_semantic = { path = "crates/semtree_semantic" }
semtree_format = { path = "crates/semtree_format" }
semtree_lint = { path = "crates/semtree_lint" }
semtree_ts_import = { path = "crates/semtree_ts_import" }
semtree_ide = { path = "crates/semtree_ide" }
semtree_refactor = { path = "crates/semtree_refactor" }
semtree_plugin = { path = "crates/semtree_plugin" }
semtree_ffi = { path = "crates/semtree_ffi" }
semtree_cli = { path = "crates/semtree_cli" }
semtree_ai = { path = "crates/semtree_ai" }

clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smol_str = "0.3"
text-size = "1.1"
rustc-hash = "2"
regex = "1"
