[package]
name = "semtree_ai"
version.workspace = true
edition.workspace = true

[dependencies]
semtree_core.workspace = true
semtree_red.workspace = true
semtree_green.workspace = true
semtree_semantic.workspace = true
semtree_query.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smol_str.workspace = true
text-size.workspace = true

[dev-dependencies]
semtree_parser.workspace = true
