[package]
name = "semtree_cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "semtree"
path = "src/main.rs"

[dependencies]
semtree_core.workspace = true
semtree_lexer.workspace = true
semtree_green.workspace = true
semtree_red.workspace = true
semtree_parser.workspace = true
semtree_grammar.workspace = true
semtree_ts_import.workspace = true
clap.workspace = true
serde_json.workspace = true
