[package]
name = "semtree_runtime"
version.workspace = true
edition.workspace = true

[dependencies]
semtree_core.workspace = true
semtree_grammar.workspace = true
semtree_green.workspace = true
semtree_red.workspace = true
smol_str.workspace = true
text-size.workspace = true
rustc-hash.workspace = true
regex.workspace = true
