[package]
name = "todo-lsp"
version = "0.1.0"
edition = "2021"
description = "Example SemTree-powered LSP server for a tiny todo language"
publish = false

# Standalone example — not part of the SemTree workspace
[workspace]

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
